# CircuitPython_TMIDI

./: LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  tmidi.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: tmidi_midiforwarder.py  tmidi_multiple_receiver.py  tmidi_simple_arpeggiator.py  tmidi_simple_receiver.py  tmidi_simpletest.py
tests/: test_one.py  test_tmidi_messages.py  test_tmidi_one.py
